--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -96,7 +96,7 @@
       <h3 class="sponsors-grade">Venue</h3>
       <ul class="sponsors-list">
         <li>
-          <%- include('./_partial/sponsor', { id: 'hosei', grade: 'others' }) %>
+          <%- include('./_partial/sponsor', { id: 'hosei', grade: 'venue' }) %>
         </li>
       </ul>
     </div>
