申し込みモジュール戻す

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -52,6 +52,8 @@
     </div>
   </div>
 
+  <%- include('_partial/tickets') -%>
+
   <!-- Sponsors -->
   <div class="home-sponsors">
     <h2 class="home-subhead home-sponsorsSubhead">Sponsors</h2>
