--- a/2017/src/html/_partial/tickets.ejs
+++ b/2017/src/html/_partial/tickets.ejs
@@ -2,17 +2,16 @@
 <section class="tickets" id="tickets">
   <div class="tickets-inner">
     <header class="tickets-header">
-      <h3 class="tickets-title">Call For Papers</h3>
+      <h3 class="tickets-title">Tickets</h3>
       <div class="tickets-note">
-        <p>学園祭への登壇者を募集しています。セッションまたはライトニングトークでの登壇を希望の方はぜひご応募ください。</p>
-        <p>We need your talk. Please apply if you are interested in presenting.</p>
+        <p>参加申し込みは10月25日頃を開始予定です。</p>
       </div>
     </header>
     <div class="tickets-body">
       <div class="tickets-action">
         <div class="tickets-button">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSf0TDlTdLWFE7yAnCyt3T_MCtJW-7u3T4XEpOVuZM61SnzG6w/viewform" class="Button -conference" target="_blank">
-            Application form
+          <a href="#" class="Button -workshop is-disabled" target="_blank">
+            Get Your Ticket
           </a>
         </div>
       </div>
