--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -5,6 +5,19 @@
 <div class="home">
 
   <div class="cover">
+    <header class="header cover-header">
+      <nav class="navigation">
+        <ul class="navigation-list cover-navigationList">
+          <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
+        </ul>
+        <button class="navigation-button">
+          <svg xmlns="http://www.w3.org/2000/svg" class="navigation-icon"><use xlink:href="#close"></use></svg>
+        </button>
+      </nav>
+      <button class="header-button">
+        <svg xmlns="http://www.w3.org/2000/svg" class="header-icon"><use xlink:href="#nav"></use></svg>
+      </button>
+    </header>
 
     <div class="cover-inner">
 
