--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -1,4 +1,4 @@
-<div class="timetable -conference">
+<div class="timetable -workshop">
   <div class="timetable-caption">
     <h3 class="timetable-title">
       Nov 26 <span class="timetable-venue">at Recruit Technologies</span>
