fix(timetable): B会場に日本人を集約

--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -13,6 +13,7 @@
     </div>
   </div>
 
+
   <div class="timetable-row">
     <div class="timetable-time">
       <p>10:00 - 10:30</p>
@@ -115,8 +116,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">サーバサイドエンジニアがJavaScriptを書いてTradingViewを導入した話</p>
-        <p class="timetable-sessionSpeaker">谷口 英</p>
+        <p class="timetable-sessionTitle">Real-world applications of hash functions</p>
+        <p class="timetable-sessionSpeaker">Emil Bay</p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
