--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -152,7 +152,7 @@
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Quantum Computing in Node</p>
-        <p class="timetable-sessionSpeaker">Nick Doiron</p>
+        <p class="timetable-sessionSpeaker">Nick Doiron(ニック・ドレン)</p>
       </div>
     </div>
   </div>
