ejs: fix a speaker name

--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -84,7 +84,7 @@
     <div class="timetable-content">
       <div class="timetable-session">
         <p class="timetable-sessionTitle">The JavaScript Engine in Node.js: TurboFan and Ignition</p>
-        <p class="timetable-sessionSpeaker">Franziska</p>
+        <p class="timetable-sessionSpeaker">Franziska Hinkelmann</p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Node.js x Chrome headless で、お手軽WebRTC MCU</p>
