fix(timetable): Add visualization workshop by sherly wu

--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -99,6 +99,17 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
+      <p>14:45 - 15:00</p>
+    </div>
+    <div class="timetable-content">
+      <div class="timetable-session">
+        <p class="timetable-sessionBreak">Break</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="timetable-row">
+    <div class="timetable-time">
       <p>15:00 - 15:30</p>
     </div>
     <div class="timetable-content">
@@ -152,7 +163,18 @@
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Quantum Computing in Node</p>
-        <p class="timetable-sessionSpeaker">Nick Doiron(ニック・ドレン)</p>
+        <p class="timetable-sessionSpeaker">Nick Doiron (ニック・ドレン)</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="timetable-row">
+    <div class="timetable-time">
+      <p>16:30 - 16:45</p>
+    </div>
+    <div class="timetable-content">
+      <div class="timetable-session">
+        <p class="timetable-sessionBreak">Break</p>
       </div>
     </div>
   </div>
@@ -165,6 +187,17 @@
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Sponsor's talk</p>
         <p class="timetable-sessionSpeaker">-</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="timetable-row">
+    <div class="timetable-time">
+      <p>17:15 - 17:30</p>
+    </div>
+    <div class="timetable-content">
+      <div class="timetable-session">
+        <p class="timetable-sessionBreak">Break</p>
       </div>
     </div>
   </div>
