--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -13,7 +13,6 @@
     </div>
   </div>
 
-
   <div class="timetable-row">
     <div class="timetable-time">
       <p>10:00 - 10:30</p>
@@ -44,7 +43,7 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">NodeDiscussion</p>
+        <p class="timetable-sessionTitle">Node Discussion</p>
         <p class="timetable-sessionSpeaker">Yosuke</p>
       </div>
       <div class="timetable-session">
@@ -96,7 +95,7 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">data sketch</p>
+        <p class="timetable-sessionTitle">data sketches: A Visualization a Month</p>
         <p class="timetable-sessionSpeaker">Shirley Wu</p>
       </div>
       <div class="timetable-session">
@@ -152,27 +151,49 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>16:00 - 17:00</p>
+      <p>15:45 - 16:00</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Node Panel Talks</p>
-        <p class="timetable-sessionSpeaker">-</p>
-      </div>
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">NodeSchool</p>
-        <p class="timetable-sessionSpeaker">-</p>
-      </div>
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">Workshop</p>
-        <p class="timetable-sessionSpeaker">-</p>
+        <p class="timetable-sessionBreak">Break</p>
       </div>
     </div>
   </div>
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>17:15 - 17:25</p>
+      <p>16:00 - 18:00</p>
+    </div>
+    <div class="timetable-content">
+      <div class="timetable-session">
+        <p class="timetable-sessionTitle">Code And Learn</p>
+        <p class="timetable-sessionSpeaker">Yosuke</p>
+      </div>
+      <div class="timetable-session">
+        <p class="timetable-sessionTitle">NodeSchool</p>
+        <p class="timetable-sessionSpeaker">-</p>
+      </div>
+      <div class="timetable-session">
+        <p class="timetable-sessionTitle">Data Visualization Workshop</p>
+        <p class="timetable-sessionSpeaker">Shriley Wu</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="timetable-row">
+    <div class="timetable-time">
+      <p>18:00 - 18:15</p>
+    </div>
+    <div class="timetable-content">
+      <div class="timetable-session">
+        <p class="timetable-sessionBreak">Break</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="timetable-row">
+    <div class="timetable-time">
+      <p>18:15 - 18:25</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -184,7 +205,7 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>17:25 - 17:35</p>
+      <p>18:25 - 18:35</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -196,7 +217,7 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>17:35 - 17:45</p>
+      <p>18:35 - 18:45</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -208,7 +229,7 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>17:45 - 17:55</p>
+      <p>18:45 - 18:55</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -220,11 +241,11 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>18:00 - 18:10</p>
+      <p>19:00 - 19:10</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Day2 Closing Talk</p>
+        <p class="timetable-sessionTitle">Day2 Closing Talk (Kanpai!)</p>
         <p class="timetable-sessionSpeaker">Yosuke</p>
       </div>
     </div>
@@ -232,7 +253,7 @@
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>18:15 - 20:15</p>
+      <p>19:15 - 21:15</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
