add more people

--- a/2017/src/html/about-us.ejs
+++ b/2017/src/html/about-us.ejs
@@ -5,8 +5,11 @@ var page = {
     'amagitakayosi',
     'abouthiroppy',
     'hiloki',
+    'kamiyam',
+    'ktogo_lig',
     'kysnm',
     'leader22',
+    'leichtgewicht'
     'sotayamashita',
     'vanx2',
     'watilde',
