fix typo and npm run build

--- a/2017/about-us.ejs
+++ b/2017/about-us.ejs
@@ -9,7 +9,7 @@ var page = {
     'ktogo_lig',
     'kysnm',
     'leader22',
-    'leichtgewicht',
+    'leichtgewicht'
     'sotayamashita',
     'vanx2',
     'watilde',
