add more members from the docs

--- a/2017/src/html/about-us.ejs
+++ b/2017/src/html/about-us.ejs
@@ -4,12 +4,17 @@ var page = {
   members: [
     'amagitakayosi',
     'abouthiroppy',
+    'axross_',
     'hiloki',
     'kamiyam',
     'ktogo_lig',
     'kysnm',
     'leader22',
     'leichtgewicht',
+    'meso',
+    'n0bisuke',
+    'tgfjt',
+    'ronkorving',
     'sotayamashita',
     'vanx2',
     'watilde',
