feat: add sponsors list and cybozu logo

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -123,6 +123,9 @@
         <li>
           <%- include('./_partial/sponsor', { id: 'freee', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'cybozu', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
