feat(sponsor): Add supership sponsor logo

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -126,6 +126,9 @@
         <li>
           <%- include('./_partial/sponsor', { id: 'cybozu', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'supership', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
