--- a/2017/src/html/about-us.ejs
+++ b/2017/src/html/about-us.ejs
@@ -3,7 +3,7 @@ var page = {
   title: 'About us',
   members: [
     'amagitakayosi',
-    'abouthiroppy',
+    'about_hiroppy',
     'axross_',
     'hiloki',
     'kamiyam',
@@ -14,6 +14,7 @@ var page = {
     'meso',
     'n0bisuke',
     'tgfjt',
+    'tito_net',
     'ronkorving',
     'sotayamashita',
     'vanx2',
