fix typo && npm run build

--- a/2017/src/html/about-us.ejs
+++ b/2017/src/html/about-us.ejs
@@ -16,10 +16,10 @@ var page = {
     'tgfjt',
     'tito_net',
     'ronkorving',
-    'sotayamashita',
+    'sota0805',
     'vanx2',
     'watilde',
-    'yosuke-furukawa'
+    'yosuke_furukawa'
   ],
   creators: [
     'hiloki',
