fix schedule & venues

--- a/2017/src/html/_partial/tickets.ejs
+++ b/2017/src/html/_partial/tickets.ejs
@@ -10,13 +10,13 @@
     <div class="tickets-body">
       <div class="tickets-action">
         <div class="tickets-button">
-          <a href="http://nodejs.connpass.com/event/69736/" class="Button -workshop" target="_blank">
+          <a href="http://nodejs.connpass.com/event/69736/" class="Button -conference" target="_blank">
             Get 1st Day Ticket
             <span class="tickets-buttonLead">Nov 25</span>
           </a>
         </div>
         <div class="tickets-button">
-          <a href="http://nodejs.connpass.com/event/70304" class="Button -conference" target="_blank">
+          <a href="http://nodejs.connpass.com/event/70304" class="Button -interactive" target="_blank">
             Get 2nd Day Ticket
             <span class="tickets-buttonLead">Nov 26</span>
           </a>
