--- a/2017/src/html/_partial/venue-map.ejs
+++ b/2017/src/html/_partial/venue-map.ejs
@@ -1,42 +1,40 @@
-<p class="venue-link">
-  <a href="https://www.google.com/maps/d/viewer?mid=1h2CLbH8K1dZe-UusLQbtWrlPyAE" target="_blank" class="u-link">
-    <span class="venue-linkIcon">
+<div class="venue-section">
+  <h3 class="venue-subhead page-subhead">Nov 25</h3>
+  <div class="venue-map" id="venue-day1"></div>
+  <div class="venue-detail">
+    <section class="venue-access u-tac">
+      <h3 class="venue-name">
+        <img src="img/pin-conference.png" class="venue-icon">
+        法政大学 富士見ゲート / Hosei University Fujimi Gate
+      </h3>
+      <p class="venue-address">
+        <a href="https://www.google.co.jp/maps/place/%E6%B3%95%E6%94%BF%E5%A4%A7%E5%AD%A6%E5%AF%8C%E5%A3%AB%E8%A6%8B%E3%82%B2%E3%83%BC%E3%83%88/@35.6958983,139.7408933,15z/data=!4m5!3m4!1s0x0:0xe1a94981b929a231!8m2!3d35.6958983!4d139.7408933?shorturl=1" target="_blank" rel="noopener">
+        <span class="venue-linkIcon">
       <img src="img/ico-map.svg" width="16" height="16" alt="">
-    </span>大きな地図でみる
-  </a>
-</p>
-<div class="venue-map" id="venue"></div>
-<div class="venue-detail">
-  <section class="venue-access -workshop">
-    <h3 class="venue-name">
-      <img src="img/pin-workshop.png" class="venue-icon">
-      Day 1: イベント&amp;コミュニティスペース dots.
-    </h3>
-    <p class="venue-address">
-      <a href="https://www.google.co.jp/maps/search/東京都渋谷区宇田川町20-17" target="_blank" class="u-link">
-        東京都渋谷区宇田川町20-17 NOF渋谷公園通りビル 8F
-      </a>
-    </p>
-    <ul class="venue-station">
-      <li>JR線/東京メトロ/東急線「渋谷」駅 ハチ公口から徒歩5分</li>
-    </ul>
-  </section>
-  <section class="venue-access -conference">
-    <h3 class="venue-name">
-      <img src="img/pin-conference.png" class="venue-icon">
-      Day 2: CyberAgent セミナールーム
-    </h3>
-    <p class="venue-address">
-      <a href="https://www.google.co.jp/maps/search/東京都渋谷区道玄坂1-12-1" target="_blank" class="u-link">
-        東京都渋谷区道玄坂1-12-1 渋谷マークシティ13F
-      </a>
-    </p>
-    <ul class="venue-station">
-      <li>JR線/東京メトロ/東急線「渋谷」駅 ハチ公口から徒歩5分</li>
-      <li>京王井の頭線「渋谷」駅 直結</li>
-    </ul>
-    <p class="venue-note">
-      <a href="http://frontrend.github.io/blog/shibuya-markcity/" target="_blank" class="u-link">スッキリわかるマークシティ入門</a>
-    </p>
-  </section>
+    </span> 東京都千代田区富士見2-17-1
+        </a>
+      </p>
+    </section>
+  </div>
+</div>
+
+<div class="venue-section">
+  <h3 class="venue-subhead page-subhead">Nov 26</h3>
+  <div class="venue-map" id="venue-day2"></div>
+  <div class="venue-detail">
+    <section class="venue-access u-tac">
+      <h3 class="venue-name">
+        <img src="img/pin-interactive.png" class="venue-icon">
+        リクルートテクノロジーズ グラントウキョウサウスタワー 41F / Recruit Technologies Gran Tokyo South Tower 41F
+      </h3>
+      <p class="venue-address">
+        <a href="https://www.google.com/maps/place/%E3%82%B0%E3%83%A9%E3%83%B3%E3%83%88%E3%82%A6%E3%82%AD%E3%83%A7%E3%82%A6+%E3%82%B5%E3%82%A6%E3%82%B9%E3%82%BF%E3%83%AF%E3%83%BC/@35.678634,139.767373,16z/data=!4m5!3m4!1s0x0:0xf8d9490ce543b963!8m2!3d35.6786335!4d139.7673744?shorturl=1" target="_blank" rel="noopener">
+        <span class="venue-linkIcon">
+      <img src="img/ico-map.svg" width="16" height="16" alt="">
+    </span> 東京都千代田区丸の内1-9-2 グラントウキョウサウスタワー 41階 (受付2階)
+        </a>
+      </p>
+    </section>
+  </div>
+
 </div>
