--- a/2017/src/scss/main.scss
+++ b/2017/src/scss/main.scss
@@ -164,7 +164,7 @@ strong {
       box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
     }
   }
-  &.-workshop {
+  &.-interactive {
     border: 4px solid $color-whitefog;
     background-color: $color-sunflower;
     font-weight: 400;
@@ -722,6 +722,7 @@ $hex-image: $hex-canvas * $hex-ratio;
     font-size: 0.875rem;
   }
 }
+
 .home-venues {
   @include over-hg {
     margin-bottom: 64px;
@@ -1705,6 +1706,32 @@ $hex-image: $hex-canvas * $hex-ratio;
     margin-left: auto;
     margin-right: auto;
     max-width: $width-container;
+  }
+}
+.venue-section {
+  margin-bottom: 2rem;
+  padding-top: 1rem;
+  @include over-md {
+    margin-top: 4rem;
+  }
+}
+.venue-subhead {
+  margin-bottom: 1.5rem;
+  letter-spacing: 0.08em;
+  line-height: $line-tight;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 1.5rem;
+  color: $color-inky;
+  @include over-md {
+    font-size: 2em;
+  }
+  @include over-lg {
+    margin-bottom: 3rem;
+  }
+  @include over-hg {
+    font-size: 3em;
   }
 }
 .venue-link {
