--- a/2017/src/html/_partial/venue-map.ejs
+++ b/2017/src/html/_partial/venue-map.ejs
@@ -1,5 +1,5 @@
 <div class="venue-section">
-  <h3 class="venue-subhead page-subhead">Nov 25</h3>
+  <h3 class="venue-subhead -conference">Nov 25</h3>
   <div class="venue-map" id="venue-day1"></div>
   <div class="venue-detail">
     <section class="venue-access u-tac">
@@ -19,7 +19,7 @@
 </div>
 
 <div class="venue-section">
-  <h3 class="venue-subhead page-subhead">Nov 26</h3>
+  <h3 class="venue-subhead -interactive">Nov 26</h3>
   <div class="venue-map" id="venue-day2"></div>
   <div class="venue-detail">
     <section class="venue-access u-tac">
