挙動確認用

--- a/2017/src/html/_partial/navigation.ejs
+++ b/2017/src/html/_partial/navigation.ejs
@@ -3,7 +3,7 @@
     <a href="./" class="header-logo"><img src="img/logo-tnf-invert.svg" alt="東京Node学園祭2017"></a>
     <nav class="navigation">
       <ul class="navigation-list">
-        <%#- <li><a href="speakers.html" class="navigation-target">Speakers</a></li> -%>
+        <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
         <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
         <li><a href="venues.html" class="navigation-target">Venues</a></li>
         <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
