--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -1,3 +1,12 @@
+<%
+var page = {
+  speakers: [
+    'joyee',
+    'brn',
+    'rachel'
+  ]
+}
+%>
 <%- include('_layout/header') -%>
 
 <%- include('_partial/svg') -%>
@@ -8,7 +17,7 @@
     <header class="header cover-header">
       <nav class="navigation">
         <ul class="navigation-list cover-navigationList">
-          <%#- <li><a href="speakers.html" class="navigation-target">Speakers</a></li> -%>
+          <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
           <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
           <li><a href="venues.html" class="navigation-target">Venues</a></li>
           <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
@@ -46,6 +55,25 @@
   </div>
 
   <div class="main home-main">
+
+    <!-- Speakers -->
+    <div class="home-speakers">
+      <h2 class="home-subhead">Featured Speakers</h2>
+
+      <ul class="speakers-list">
+        <% page.speakers.forEach(function(speaker) { %>
+        <li>
+          <%- include('_partial/speaker', { id: speaker }) -%>
+          <%- include('_partial/speaker-overlay', { id: speaker }) -%>
+        </li>
+        <% }); %>
+      </ul>
+      <div class="home-speakersAction">
+        <a href="speakers.html" class="Button -primary">
+          Check All Speakers
+        </a>
+      </div>
+    </div>
 
     <!-- Schedule -->
     <div class="home-schedule">
