Enable speaker-overlay on schedule table

--- a/2017/src/html/_partial/speaker.ejs
+++ b/2017/src/html/_partial/speaker.ejs
@@ -2,7 +2,7 @@
 var speaker = speakers[id];
 var session = sessions[id];
 %>
-<a href="<%= speaker.url %>" class="speaker" data-key="<%= id %>">
+<a class="speaker" data-key="<%= id %>">
   <div class="speaker-image">
     <div class="Hex">
       <div class="Hex-outer">
