--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -1,9 +1,12 @@
 <%
 var page = {
   speakers: [
+    'myles',
+    'kosamari',
     'joyee',
-    'brn',
-    'rachel'
+    'rachel',
+    'fhinkel',
+    'sarah'
   ]
 }
 %>
