--- a/2017/src/html/speakers.ejs
+++ b/2017/src/html/speakers.ejs
@@ -4,7 +4,26 @@ var page = {
   speakers: [
     'joyee',
     'brn',
-    'rachel'
+    'rachel',
+    'myles',
+    'jbucaran',
+    'gergely',
+    'fhinkel',
+    'ganeko',
+    'kgryte',
+    'kosamari',
+    'leko',
+    'sia',
+    'chris',
+    'sota',
+    'rob',
+    'gil',
+    'horobi',
+    'nick',
+    'sarah',
+    'sxywu',
+    'emil',
+    'pika'
   ]
 }
 %>
