fix timetable links

--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -2,7 +2,22 @@
 var overlaySpeakers = [
   'joyee',
   'brn',
-  'rachel'
+  'rachel',
+  'myles',
+  'jbucaran',
+  'gergely',
+  'fhinkel',
+  'ganeko',
+  'kgryte',
+  'kosamari',
+  'leko',
+  'sia',
+  'chris',
+  'sota',
+  'rob',
+  'gil',
+  'horobi',
+  'nick'
 ]
 %>
 <% overlaySpeakers.forEach(function(speaker) { %>
@@ -53,16 +68,22 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Node.js at Alibaba</p>
-        <p class="timetable-sessionSpeaker"><a data-key="joyee" class="speaker">Joyee Cheung</a></p>
+        <a data-key="joyee" class="speaker">
+          <p class="timetable-sessionTitle">Node.js at Alibaba</p>
+          <p class="timetable-sessionSpeaker">Joyee Cheung</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Source to Binary - journey of V8 javascript engine</p>
-        <p class="timetable-sessionSpeaker"><a data-key="brn" class="speaker">青野健利 a.k.a brn</a></p>
+        <a data-key="brn" class="speaker">
+          <p class="timetable-sessionTitle">Source to Binary - journey of V8 javascript engine</p>
+          <p class="timetable-sessionSpeaker">青野健利 a.k.a brn</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Alt-Ctrl: Scream Into this Arduino!</p>
-        <p class="timetable-sessionSpeaker"><a data-key="rachel" class="speaker">Rachel White</a></p>
+        <a data-key="rachel" class="speaker">
+          <p class="timetable-sessionTitle">Alt-Ctrl: Scream Into this Arduino!</p>
+          <p class="timetable-sessionSpeaker">Rachel White</p>
+        </a>
       </div>
     </div>
   </div>
@@ -73,16 +94,22 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Open Source Governance Models: From BDFL to Consensus Seeking</p>
-        <p class="timetable-sessionSpeaker">Myles Borins</p>
+        <a data-key="myles" class="speaker">
+          <p class="timetable-sessionTitle">Open Source Governance Models: From BDFL to Consensus Seeking</p>
+          <p class="timetable-sessionSpeaker">Myles Borins</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Make you a React: How to build your own JavaScript framework.</p>
-        <p class="timetable-sessionSpeaker">Jorge Bucaran</p>
+        <a data-key="jbucaran" class="speaker">
+          <p class="timetable-sessionTitle">Make you a React: How to build your own JavaScript framework.</p>
+          <p class="timetable-sessionSpeaker">Jorge Bucaran</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Node.js Production Checklist</p>
-        <p class="timetable-sessionSpeaker">Gergely Nemeth</p>
+        <a data-key="gergely" class="speaker">
+          <p class="timetable-sessionTitle">Node.js Production Checklist</p>
+          <p class="timetable-sessionSpeaker">Gergely Nemeth</p>
+        </a>
       </div>
     </div>
   </div>
@@ -93,16 +120,22 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">The JavaScript Engine in Node.js: TurboFan and Ignition</p>
-        <p class="timetable-sessionSpeaker">Franziska Hinkelmann</p>
+        <a data-key="fhinkel" class="speaker">
+          <p class="timetable-sessionTitle">The JavaScript Engine in Node.js: TurboFan and Ignition</p>
+          <p class="timetable-sessionSpeaker">Franziska Hinkelmann</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Node.js x Chrome headless で、お手軽WebRTC MCU</p>
-        <p class="timetable-sessionSpeaker">がねこまさし</p>
+        <a data-key="ganeko" class="speaker">
+          <p class="timetable-sessionTitle">Node.js x Chrome headless で、お手軽WebRTC MCU</p>
+          <p class="timetable-sessionSpeaker">がねこまさし</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">WebAssembly and the Future of the Web</p>
-        <p class="timetable-sessionSpeaker">Athan Reines</p>
+        <a data-key="kgryte" class="speaker">
+          <p class="timetable-sessionTitle">WebAssembly and the Future of the Web</p>
+          <p class="timetable-sessionSpeaker">Athan Reines</p>
+        </a>
       </div>
     </div>
   </div>
@@ -124,16 +157,22 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">標準化ってなに？ Webプラットフォーム/ESNextを作る方法 -What is standardization? How to create Web Platform / ESNext -</p>
-        <p class="timetable-sessionSpeaker">Mariko Kosaka</p>
+        <a data-key="kosamari" class="speaker">
+          <p class="timetable-sessionTitle">標準化ってなに？ Webプラットフォーム/ESNextを作る方法</p>
+          <p class="timetable-sessionSpeaker">Mariko Kosaka</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">ReactNativeアプリでE2Eテストを回してみた</p>
-        <p class="timetable-sessionSpeaker">れこ</p>
+        <a data-key="leko" class="speaker">
+          <p class="timetable-sessionTitle">ReactNativeアプリでE2Eテストを回してみた</p>
+          <p class="timetable-sessionSpeaker">れこ</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">No REST for the weary... Introducing GraphQL</p>
-        <p class="timetable-sessionSpeaker">Sia Karamalegos</p>
+        <a data-key="sia" class="speaker">
+          <p class="timetable-sessionTitle">No REST for the weary... Introducing GraphQL</p>
+          <p class="timetable-sessionSpeaker">Sia Karamalegos</p>
+        </a>
       </div>
     </div>
   </div>
@@ -144,16 +183,22 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Building on Bitcoin with Bcoin and Node.js</p>
-        <p class="timetable-sessionSpeaker">Christopher "JJ" Jeffrey</p>
+        <a data-key="chris" class="speaker">
+          <p class="timetable-sessionTitle">Building on Bitcoin with Bcoin and Node.js</p>
+          <p class="timetable-sessionSpeaker">Christopher "JJ" Jeffrey</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">今さら聞けないSPAのCORS対策の話</p>
-        <p class="timetable-sessionSpeaker">杉浦颯太</p>
+        <a data-key="sota" class="speaker">
+          <p class="timetable-sessionTitle">今さら聞けないSPAのCORS対策の話</p>
+          <p class="timetable-sessionSpeaker">杉浦颯太</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">A Toy Robot and a Functional Pattern</p>
-        <p class="timetable-sessionSpeaker">Rob Howard</p>
+        <a data-key="rob" class="speaker">
+          <p class="timetable-sessionTitle">A Toy Robot and a Functional Pattern</p>
+          <p class="timetable-sessionSpeaker">Rob Howard</p>
+        </a>
       </div>
     </div>
   </div>
@@ -164,16 +209,22 @@ var overlaySpeakers = [
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Native ES Module - something almost, but not quite entirely unlike CommonJS</p>
-        <p class="timetable-sessionSpeaker">Gil Tayar</p>
+        <a data-key="gil" class="speaker">
+          <p class="timetable-sessionTitle">Native ES Module - something almost, but not quite entirely unlike CommonJS</p>
+          <p class="timetable-sessionSpeaker">Gil Tayar</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">サーバサイドエンジニアがJavaScriptを書いてTradingViewを導入した話</p>
-        <p class="timetable-sessionSpeaker">谷口 英</p>
+        <a data-key="horobi" class="speaker">
+          <p class="timetable-sessionTitle">サーバサイドエンジニアがJavaScriptを書いてTradingViewを導入した話</p>
+          <p class="timetable-sessionSpeaker">谷口 英</p>
+        </a>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Quantum Computing in Node</p>
-        <p class="timetable-sessionSpeaker">Nick Doiron (ニック・ドレン)</p>
+        <a data-key="nick" class="speaker">
+          <p class="timetable-sessionTitle">Quantum Computing in Node</p>
+          <p class="timetable-sessionSpeaker">Nick Doiron (ニック・ドレン)</p>
+        </a>
       </div>
     </div>
   </div>
@@ -196,7 +247,6 @@ var overlaySpeakers = [
     <div class="timetable-content">
       <div class="timetable-session">
         <p class="timetable-sessionTitle">Sponsor's talk</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
     </div>
   </div>
