--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -1,3 +1,14 @@
+<%
+var overlaySpeakers = [
+  'sarah',
+  'sxywu',
+  'emil',
+  'pika'
+]
+%>
+<% overlaySpeakers.forEach(function(speaker) { %>
+<%- include('../_partial/speaker-overlay', { id: speaker }) -%>
+<% }); %>
 <div class="timetable -workshop">
   <div class="timetable-caption">
     <h3 class="timetable-title">
@@ -75,8 +86,10 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Sharing is Caring… At Scale!</p>
-        <p class="timetable-sessionSpeaker">Sarah Saltrick Meyer</p>
+        <a data-key="sarah" class="speaker">
+          <p class="timetable-sessionTitle">Sharing is Caring… At Scale!</p>
+          <p class="timetable-sessionSpeaker">Sarah Saltrick Meyer</p>
+        </a>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
@@ -95,8 +108,10 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">data sketches: A Visualization a Month</p>
-        <p class="timetable-sessionSpeaker">Shirley Wu</p>
+        <a data-key="sxywu" class="speaker">
+          <p class="timetable-sessionTitle">data sketches: A Visualization a Month</p>
+          <p class="timetable-sessionSpeaker">Shirley Wu</p>
+        </a>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
@@ -115,8 +130,10 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Real-world applications of hash functions</p>
-        <p class="timetable-sessionSpeaker">Emil Bay</p>
+        <a data-key="emil" class="speaker">
+          <p class="timetable-sessionTitle">Real-world applications of hash functions</p>
+          <p class="timetable-sessionSpeaker">Emil Bay</p>
+        </a>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
@@ -135,8 +152,10 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">JSON Schema Centralized Design</p>
-        <p class="timetable-sessionSpeaker">Hikaru TAKEMURA</p>
+        <a data-key="pika" class="speaker">
+          <p class="timetable-sessionTitle">JSON Schema Centralized Design</p>
+          <p class="timetable-sessionSpeaker">Hikaru TAKEMURA</p>
+        </a>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">NodeSchool</p>
