refactor: LTs table

--- a/2017/src/html/_partial/timetable-conference.ejs
+++ b/2017/src/html/_partial/timetable-conference.ejs
@@ -264,60 +264,33 @@ var overlaySpeakers = [
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>17:30 - 17:40</p>
+      <p>17:30 - 18:20</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Angular Universal</p>
-        <p class="timetable-sessionSpeaker">Suguru Inatomi</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>17:40 - 17:50</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">2017版、React、Lambda、S3で始めるモダンなユーザーデータ可視化ツール</p>
-        <p class="timetable-sessionSpeaker">向山 裕介</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>17:50 -  18:00</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">How TypeScript can simplify design decision</p>
-        <p class="timetable-sessionSpeaker">Hyunje Jun</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>18:00 - 18:10</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">Introduction to Visual Regression Testing</p>
-        <p class="timetable-sessionSpeaker">Yusuke Kurami</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>18:10 - 18:20</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">Whose Community?</p>
-        <p class="timetable-sessionSpeaker">ちゃんとく / Yuka Tokuyama</p>
+      <p class="timetable-sessionTitle">Lightning Talks</p>
+      <ul class="timetable-lts">
+        <li>
+          <p class="timetable-ltsTitle">Angular Universal</p>
+          <p class="timetable-ltsSpeaker">Suguru Inatomi</p>
+        </li>
+        <li>
+          <p class="timetable-ltsTitle">2017版、React、Lambda、S3で始めるモダンなユーザーデータ可視化ツール</p>
+          <p class="timetable-ltsSpeaker">向山 裕介</p>
+        </li>
+        <li>
+          <p class="timetable-ltsTitle">How TypeScript can simplify design decision</p>
+          <p class="timetable-ltsSpeaker">Hyunje Jun</p>
+        </li>
+        <li>
+          <p class="timetable-ltsTitle">Introduction to Visual Regression Testing</p>
+          <p class="timetable-ltsSpeaker">Yusuke Kurami</p>
+        </li>
+        <li>
+          <p class="timetable-ltsTitle">Whose Community?</p>
+          <p class="timetable-ltsSpeaker">ちゃんとく / Yuka Tokuyama</p>
+        </li>
+      <ul>
       </div>
     </div>
   </div>
@@ -341,7 +314,6 @@ var overlaySpeakers = [
     <div class="timetable-content">
       <div class="timetable-session">
         <p class="timetable-sessionTitle">After party</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
     </div>
   </div>
