--- a/2017/src/html/_partial/timetable-interactive.ejs
+++ b/2017/src/html/_partial/timetable-interactive.ejs
@@ -212,48 +212,29 @@ var overlaySpeakers = [
 
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>18:15 - 18:25</p>
+      <p>18:15 - 18:55</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Self Driving Kit using Android and Node.JS</p>
-        <p class="timetable-sessionSpeaker">ABHISHEK GOSWAMI</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>18:25 - 18:35</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">react & express で職場の会議室予約システム作った話</p>
-        <p class="timetable-sessionSpeaker">Takuya Endo</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>18:35 - 18:45</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">Node.js × AWS Lambda アプリケーション開発Tips</p>
-        <p class="timetable-sessionSpeaker">hkusu(Hiroyuki Kusu)</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="timetable-row">
-    <div class="timetable-time">
-      <p>18:45 - 18:55</p>
-    </div>
-    <div class="timetable-content">
-      <div class="timetable-session">
-        <p class="timetable-sessionTitle">レスポンシブから逆戻り！？Webサービスのマルチデバイス対応方法</p>
-        <p class="timetable-sessionSpeaker">小田島 太郎</p>
+        <p class="timetable-sessionTitle">Lightning Talks</p>
+        <ul class="timetable-lts">
+          <li>
+            <p class="timetable-ltsTitle">Self Driving Kit using Android and Node.JS</p>
+            <p class="timetable-ltsSpeaker">ABHISHEK GOSWAMI</p>
+          </li>
+          <li>
+            <p class="timetable-ltsTitle">react & express で職場の会議室予約システム作った話</p>
+            <p class="timetable-ltsSpeaker">Takuya Endo</p>
+          </li>
+          <li>
+            <p class="timetable-ltsTitle">Node.js × AWS Lambda アプリケーション開発Tips</p>
+            <p class="timetable-ltsSpeaker">hkusu(Hiroyuki Kusu)</p>
+          </li>
+          <li>
+            <p class="timetable-ltsTitle">レスポンシブから逆戻り！？Webサービスのマルチデバイス対応方法</p>
+            <p class="timetable-ltsSpeaker">小田島 太郎</p>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
@@ -277,7 +258,6 @@ var overlaySpeakers = [
     <div class="timetable-content">
       <div class="timetable-session">
         <p class="timetable-sessionTitle">After party</p>
-        <p class="timetable-sessionSpeaker">-</p>
       </div>
     </div>
   </div>
