リクルートライフスタイル追加

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -129,6 +129,9 @@
         <li>
           <%- include('./_partial/sponsor', { id: 'supership', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'r-life', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
