--- a/2017/src/html/sponsors.ejs
+++ b/2017/src/html/sponsors.ejs
@@ -58,6 +58,9 @@ var page = {
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'supership', grade: 'silver' }) %>
             </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'r-life', grade: 'silver' }) %>
+            </li>
           </ul>
         </div>
         <div class="prs-section">
