スポンサー追加

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -137,6 +137,9 @@ var page = {
         <li>
           <%- include('./_partial/sponsor', { id: 'nissan', grade: 'gold' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'auth0', grade: 'gold' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
@@ -162,6 +165,17 @@ var page = {
         </li>
         <li>
           <%- include('./_partial/sponsor', { id: 'r-life', grade: 'silver' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'gms', grade: 'silver' }) %>
+        </li>
+      </ul>
+    </div>
+    <div class="sponsors-section">
+      <h3 class="sponsors-grade">Bronze</h3>
+      <ul class="sponsors-list -venue">
+        <li>
+          <%- include('./_partial/sponsor', { id: 'sphinx', grade: 'bronze' }) %>
         </li>
       </ul>
     </div>
