--- a/2017/src/html/sponsors.ejs
+++ b/2017/src/html/sponsors.ejs
@@ -35,6 +35,9 @@ var page = {
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'nissan', grade: 'gold' }) %>
             </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'auth0', grade: 'gold' }) %>
+            </li>
           </ul>
         </div>
         <div class="prs-section">
@@ -60,6 +63,17 @@ var page = {
             </li>
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'r-life', grade: 'silver' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'gms', grade: 'silver' }) %>
+            </li>
+          </ul>
+        </div>
+        <div class="prs-section">
+          <h3 class="prs-grade">Bronze</h3>
+          <ul class="prs-list -venue">
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'sphinx', grade: 'bronze' }) %>
             </li>
           </ul>
         </div>
